# myoshu

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
myoshu/: db.py  go.py  main.py
resources/: games.db  proverbs.txt
tests/: test_go.py
