[tool.poetry]
name = "myoshu"
version = "0.1.0"
description = "A simple CLI for playing Go."
authors = [ "Æ Griffiths <164574794+damwaingames@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
myoshu = "myoshu.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
